syntax = "proto3";

option go_package = "pb/game";

import "common/common.proto";
import "common/empty.proto";
import "common/session.proto";
import "common/c2gate.proto";
import "common/node_common.proto";

option cc_generic_services = true;

message GateClientMessageRequest
{
  IpPort rpc_client = 1;
}

message GateSessionDisconnectRequest
{
  uint64 session_id = 1;
}

message LoginNodeLeaveGameRequest
{
}

message LoginNodeDisconnectRequest
{
}


message EnterGameNodeSuccessRequest
{
  uint64 player_id = 1;
  uint32 game_node_id = 2;
}

message CentrePlayerGameNodeEntryRequest
{
  EnterGameRequest client_msg_body = 1;
  SessionInfo session_info = 2;
}

service CentreService {
  rpc RegisterGame (RegisterGameRequest) returns (Empty);
  rpc RegisterGate (RegisterGateRequest) returns (Empty);
  rpc GatePlayerService (GateClientMessageRequest) returns (Empty);
  rpc GateSessionDisconnect (GateSessionDisconnectRequest) returns (Empty); 
  rpc LsLoginAccount (LoginRequest) returns (LoginResponse);
  rpc OnLoginEnterGame (CentrePlayerGameNodeEntryRequest) returns (Empty);
  rpc LoginNodeLeaveGame (LoginNodeLeaveGameRequest) returns (Empty);
  rpc LsDisconnect (LoginNodeDisconnectRequest) returns (Empty); 
  rpc GsPlayerService (NodeRouteMessageRequest) returns (NodeRouteMessageResponse);
  rpc EnterGsSucceed (EnterGameNodeSuccessRequest) returns (Empty);
  rpc RouteNodeStringMsg (RouteMsgStringRequest) returns (RouteMsgStringResponse);
  rpc RoutePlayerStringMsg (RoutePlayerMsgStringRequest) returns (RoutePlayerMsgStringResponse);
  rpc UnRegisterGame (UnRegisterGameRequest) returns (Empty);
}
